--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -19,13 +19,15 @@
 
 .navbar-logo-container {
 	font-weight: 500;
-	font-size: large;
+	font-size: 22px;
 }
 
 .navbar-search-container {
 	background: whitesmoke;
-	padding: 8px 16px;
+	padding: 8px 12px;
 	border-radius: 8px;
+	display: flex;
+	gap: 8px;
 }
 
 .navbar-search-input {
@@ -35,4 +37,14 @@
 	font-size: 16px;
 	width: 100%;
 	outline: none;
+}
+
+.navbar-links-container {
+	display: flex;
+	gap: 16px;
+}
+
+.navbar-links-container a {
+	color: black;
+	text-decoration: none;
 }
