--- a/frontend/src/styles/ProductCard.css
+++ b/frontend/src/styles/ProductCard.css
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
+	position: relative;
 }
 
 .product-info-container {
@@ -40,4 +41,15 @@
 	margin: 4px 0;
 	margin-top: 12px;
 	max-width: 200px;
+}
+
+.product-add-cart {
+	position: absolute;
+	right: 8px;
+	top: 8px;
+	z-index: 10;
+	padding: 4px;
+	border: none;
+	background: none;
+	cursor: pointer;
 }
