--- a/frontend/src/styles/CollectionCard.css
+++ b/frontend/src/styles/CollectionCard.css
@@ -23,12 +23,13 @@
 	padding: 8px;
 	box-sizing: border-box;
 	color: white;
+	font-size: 18px;
 }
 
 .collection-name-overlay {
 	width: 100%;
-	height: 40%;
+	height: 60%;
 	position: absolute;
-	background: linear-gradient(180deg, transparent 0%, #0006 100%);
+	background: linear-gradient(180deg, transparent 0%, #000f 100%);
 	bottom: 0;
 }
