--- a/frontend/src/styles/CollectionTab.css
+++ b/frontend/src/styles/CollectionTab.css
@@ -1,6 +1,9 @@
 .collection-grid-container {
-	display: flex;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 	justify-content: center;
-	padding: 32px 8px;
+	padding: 32px 16px;
 	gap: 32px;
+	width: 100%;
+	max-width: 1000px;
 }
