--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -5,6 +5,8 @@
 	justify-content: center;
 	background: white;
 	border-bottom: 1px solid lightgray;
+	position: sticky;
+	top: 0;
 }
 
 .navbar-container {
@@ -47,4 +49,22 @@
 .navbar-links-container a {
 	color: black;
 	text-decoration: none;
+	position: relative;
+}
+
+.cart-count-badge {
+	background: red;
+	color: white;
+	border-radius: 50%;
+	display: block;
+	position: absolute;
+	top: -4px;
+	right: -8px;
+	font-size: 12px;
+	height: 16px;
+	width: 16px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: 500;
 }
